--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -21,6 +21,7 @@ ext {
 }
 
 dependencies {
+    implementation 'log4j:log4j:1.2.17'
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     compileOnly 'org.projectlombok:lombok'
