--- a/identity-service/build.gradle
+++ b/identity-service/build.gradle
@@ -22,6 +22,7 @@ repositories {
 
 
 dependencies {
+    implementation 'log4j:log4j:1.2.17'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
