database-service controllers

--- a/database-service/src/main/resources/application.properties
+++ b/database-service/src/main/resources/application.properties
@@ -11,3 +11,20 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=${POSTGRES_SCHEMA}
+#Mappings
+mapping.dispatcher.get=/api/dispatcher/get
+mapping.dispatcher.create=/api/dispatcher/create
+mapping.dispatcher.update=/api/dispatcher/update
+mapping.dispatcher.delete=/api/dispatcher/delete
+mapping.plane.get=/api/plane/get
+mapping.plane.create=/api/plane/create
+mapping.plane.update=/api/plane/update
+mapping.plane.delete=/api/plane/delete
+mapping.airport.get=/api/airport/get
+mapping.airport.create=/api/airport/create
+mapping.airport.update=/api/airport/update
+mapping.airport.delete=/api/airport/delete
+mapping.flight.get=/api/flights/get
+mapping.flight.create=/api/flights/create
+mapping.flight.update=/api/flights/update
+mapping.flight.delete=/api/flights/delete
