identity-serivce auth

--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=identity-service
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 #Port
 server.port=${IDENTITY_SERVICE_PORT}
+jwt.signing.key=${JWT_SECRET_ACCESS}
+#Urls
+url.database-service=${DATABASE_SERVICE_URL}
+#Mappings database-service
+mapping.dispatcher.get=/api/dispatcher/get
+mapping.dispatcher.create=/api/dispatcher/create
+#Mappings
+mapping.auth.login=/api/auth/login
+mapping.auth.register=/api/auth/register
+mapping.auth.authorize=/api/auth/authorize
+mapping.auth.id-by-token=/api/auth/getIdByToken
