add spring security

--- a/database-service/src/main/resources/application.properties
+++ b/database-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=database-service
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 #Port
 server.port=${DATABASE_SERVICE_PORT}
+#Security
+security.service-token=${SERVICE_TOKEN_VALUE}
+security.service-token.header=${SERVICE_TOKEN_NAME}
 #Postgres
 spring.datasource.url=jdbc:postgresql://${POSTGRES_URL}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
