--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=identity-service
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 #Port
 server.port=${IDENTITY_SERVICE_PORT}
+#Security
+security.service-token=${SERVICE_TOKEN_VALUE}
+security.service-token.header=${SERVICE_TOKEN_NAME}
 jwt.signing.key=${JWT_SECRET_ACCESS}
 #Urls
 url.database-service=${DATABASE_SERVICE_URL}
