--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,16 +33,16 @@ services:
     ports:
       - 8082:8082
 
-#  plane-service:
-#    image: plane-service
-#    build: plane-service
-#    container_name: plane-service
-#    env_file:
-#      - .env
-#    ports:
-#      - 8083:8083
-#    volumes:
-#      - data:/var/lib/plane-service/data
+  plane-service:
+    image: plane-service
+    build: plane-service
+    container_name: plane-service
+    env_file:
+      - .env
+    ports:
+      - 8083:8083
+    volumes:
+      - data:/var/lib/plane-service/data
 
   gateway:
     image: gateway
@@ -52,6 +52,24 @@ services:
       - .env
     ports:
       - 8080:8080
-
+  frontend:
+    image: node:18-alpine
+    container_name: frontend
+    build:
+      context: ./node
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./node:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - API_BASE_URL=http://gateway:8080
+    working_dir: /app
+    command: sh -c "npm install && npm run dev"
+    depends_on:
+      - gateway
+    restart: unless-stopped
 volumes:
   data:
