--- a/client/test/CMakeLists.txt
+++ b/client/test/CMakeLists.txt
@@ -1,2 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 project(test)
+
+add_executable(test1 test1.cpp)
+target_link_libraries(test1 src)
+
+add_test(NAME TestRepos COMMAND test1)
